--- a/packages/core/src/components/date-picker/date-picker.scss
+++ b/packages/core/src/components/date-picker/date-picker.scss
@@ -9,97 +9,173 @@
 
 @import 'common-variables';
 
-.header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.selector {
-  flex-basis: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: $tiny-space $default-space;
-
-  .dropdown {
-    color: var(--theme-menu-item--color);
-    font-size: 14px;
-    line-height: 20px;
-  }
-
-  .fontSize {
-    font-size: 16px;
-  }
-
-  .capitalize {
-    text-transform: capitalize;
-  }
-
-  .arrowYear {
+:host {
+  .header {
     display: flex;
-    position: relative;
-    padding: $medium-space $x-large-space;
     align-items: center;
-    cursor: pointer;
-
-    &:hover {
-      background-color: var(--theme-select-list-item--background--hover);
-    }
-
-    &.selected {
-      background-color: var(--theme-select-list-item--background--selected);
-    }
-
-    .arrowPosition {
-      position: absolute;
-      left: calc(($x-large-space / 2) - 6px);
-      top: calc(50% - 6px);
-    }
-
-    .checkPosition {
-      position: absolute;
-      left: calc(($x-large-space / 2) - 6px);
-      top: calc(50% - 8px);
-    }
-
-    .monthMargin {
-      margin-left: 10px;
-    }
+    justify-content: space-between;
   }
-}
 
-.wrapper {
-  display: flex;
-
-  .overflow {
-    overflow-y: scroll;
-    max-height: 250px;
-  }
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(8, 40px);
-  grid-template-rows: repeat(7, 40px);
-  align-items: center;
-  justify-items: center;
-  justify-content: center;
-  color: var(--theme-datepicker-today--color);
-
-  .calendar-item {
-    position: relative;
+  .selector {
+    flex-basis: 100%;
     display: flex;
+    align-items: center;
     justify-content: center;
-    align-items: center;
-    background-color: var(--theme-datepicker-day--background);
-    border: 1px solid var(--theme-datepicker-day--background);
-    width: 40px;
-    height: 40px;
-    cursor: pointer;
+    padding: $tiny-space $default-space;
 
-    &.today {
-      border: 1px solid var(--theme-datepicker-today--border-color);
+    .dropdown {
+      color: var(--theme-menu-item--color);
+      font-size: 14px;
+      line-height: 20px;
+    }
+
+    .fontSize {
+      font-size: 16px;
+    }
+
+    .capitalize {
+      text-transform: capitalize;
+    }
+
+    .arrowYear {
+      display: flex;
+      position: relative;
+      padding: $medium-space $x-large-space;
+      align-items: center;
+      cursor: pointer;
+
+      &:hover {
+        background-color: var(--theme-select-list-item--background--hover);
+      }
+
+      &.selected {
+        background-color: var(--theme-select-list-item--background--selected);
+      }
+
+      .arrowPosition {
+        position: absolute;
+        left: calc(($x-large-space / 2) - 6px);
+        top: calc(50% - 6px);
+      }
+
+      .checkPosition {
+        position: absolute;
+        left: calc(($x-large-space / 2) - 6px);
+        top: calc(50% - 8px);
+      }
+
+      .monthMargin {
+        margin-left: 10px;
+      }
+    }
+  }
+
+  .wrapper {
+    display: flex;
+
+    .overflow {
+      overflow-y: scroll;
+      max-height: 250px;
+    }
+  }
+
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(8, 40px);
+    grid-template-rows: repeat(7, 40px);
+    align-items: center;
+    justify-items: center;
+    justify-content: center;
+    color: var(--theme-datepicker-today--color);
+
+    .calendar-item {
+      position: relative;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: var(--theme-datepicker-day--background);
+      border: 1px solid var(--theme-datepicker-day--background);
+      width: 40px;
+      height: 40px;
+      cursor: pointer;
+
+      &.today {
+        border: 1px solid var(--theme-datepicker-today--border-color);
+
+        &:hover {
+          background-color: var(--theme-datepicker-day--background--hover);
+        }
+
+        &:active {
+          background-color: var(--theme-datepicker-day--background--active);
+        }
+
+        &.selected {
+          box-shadow: inset 0 0 0 1px white;
+
+          &:hover {
+            background-color: var(
+              --theme-datepicker-day--background--selected-hover
+            );
+          }
+
+          &:active {
+            background-color: var(
+              --theme-datepicker-day--background--selected-active
+            );
+          }
+
+          &.disabled {
+            pointer-events: none;
+            background-color: var(
+              --theme-datepicker-day--background--selected-disabled
+            );
+            border: 1px solid
+              var(--theme-datepicker-day--background--selected-disabled);
+            color: var(--theme-datepicker-day--color--selected-disabled);
+          }
+        }
+
+        &.range {
+          background-color: var(--theme-datepicker-day--background--range);
+          color: var(--theme-datepicker-day--color--range);
+          border: 1px solid var(--theme-datepicker-today--border-color--range);
+          box-shadow: inset 0 0 0 1px white;
+
+          &:hover {
+            background-color: var(
+              --theme-datepicker-day--background--range-hover
+            );
+            border: 1px solid
+              var(--theme-datepicker-today--border-color--range-hover);
+          }
+
+          &:active {
+            background-color: var(
+              --theme-datepicker-day--background--range-active
+            );
+            border: 1px solid
+              var(--theme-datepicker-today--border-color--range-active);
+          }
+
+          &.disabled {
+            background-color: var(
+              --theme-datepicker-day--background--range-disabled
+            );
+            color: var(--theme-datepicker-day--color--range-disabled);
+            border: 1px solid
+              var(--theme-datepicker-today--border-color--range-disabled);
+          }
+        }
+
+        &.disabled {
+          pointer-events: none;
+          background-color: var(--theme-datepicker-day--background--disabled);
+          color: var(--theme-datepicker-day--color--disabled);
+          cursor: default;
+          pointer-events: none;
+        }
+      }
 
       &:hover {
         background-color: var(--theme-datepicker-day--background--hover);
@@ -110,7 +186,9 @@
       }
 
       &.selected {
-        box-shadow: inset 0 0 0 1px white;
+        background-color: var(--theme-datepicker-day--background--selected);
+        color: var(--theme-datepicker-day--color--selected);
+        border: 1px solid var(--theme-datepicker-day--background--selected);
 
         &:hover {
           background-color: var(
@@ -125,11 +203,10 @@
         }
 
         &.disabled {
+          pointer-events: none;
           background-color: var(
             --theme-datepicker-day--background--selected-disabled
           );
-          border: 1px solid
-            var(--theme-datepicker-day--background--selected-disabled);
           color: var(--theme-datepicker-day--color--selected-disabled);
         }
       }
@@ -137,140 +214,76 @@
       &.range {
         background-color: var(--theme-datepicker-day--background--range);
         color: var(--theme-datepicker-day--color--range);
-        border: 1px solid var(--theme-datepicker-today--border-color--range);
-        box-shadow: inset 0 0 0 1px white;
 
         &:hover {
           background-color: var(
             --theme-datepicker-day--background--range-hover
           );
-          border: 1px solid
-            var(--theme-datepicker-today--border-color--range-hover);
         }
 
         &:active {
           background-color: var(
             --theme-datepicker-day--background--range-active
           );
-          border: 1px solid
-            var(--theme-datepicker-today--border-color--range-active);
         }
 
         &.disabled {
+          pointer-events: none;
           background-color: var(
             --theme-datepicker-day--background--range-disabled
           );
           color: var(--theme-datepicker-day--color--range-disabled);
-          border: 1px solid
-            var(--theme-datepicker-today--border-color--range-disabled);
         }
       }
 
       &.disabled {
+        pointer-events: none;
         background-color: var(--theme-datepicker-day--background--disabled);
         color: var(--theme-datepicker-day--color--disabled);
       }
-    }
 
-    &:hover {
-      background-color: var(--theme-datepicker-day--background--hover);
-    }
-
-    &:active {
-      background-color: var(--theme-datepicker-day--background--active);
-    }
-
-    &.selected {
-      background-color: var(--theme-datepicker-day--background--selected);
-      color: var(--theme-datepicker-day--color--selected);
-      border: 1px solid var(--theme-datepicker-day--background--selected);
-
-      &:hover {
-        background-color: var(
-          --theme-datepicker-day--background--selected-hover
-        );
+      &.week-day {
+        color: var(--theme-datepicker-weekday--color);
+        font-size: 12px;
+        line-height: 20px;
+        border: none;
+        background: none;
+        cursor: initial;
       }
 
-      &:active {
-        background-color: var(
-          --theme-datepicker-day--background--selected-active
-        );
+      &.empty-day {
+        border: none;
+        background: none;
+        cursor: initial;
       }
 
-      &.disabled {
-        background-color: var(
-          --theme-datepicker-day--background--selected-disabled
-        );
-        color: var(--theme-datepicker-day--color--selected-disabled);
-      }
-    }
-
-    &.range {
-      background-color: var(--theme-datepicker-day--background--range);
-      color: var(--theme-datepicker-day--color--range);
-
-      &:hover {
-        background-color: var(--theme-datepicker-day--background--range-hover);
+      &.week-number {
+        font-size: 10px;
+        line-height: 14px;
+        color: var(--theme-datepicker-ix--color);
+        border: none;
+        background: none;
+        cursor: initial;
       }
 
-      &:active {
-        background-color: var(--theme-datepicker-day--background--range-active);
+      &:focus-visible {
+        background-color: var(--theme-datepicker-day--background--selected);
+        border: inset 1px solid
+          var(--theme-datepicker-day--border-color--selected);
+        color: var(--theme-datepicker-day--color--selected);
+        font-size: 14px;
+        line-height: 20px;
+        letter-spacing: 0;
       }
-
-      &.disabled {
-        background-color: var(
-          --theme-datepicker-day--background--range-disabled
-        );
-        color: var(--theme-datepicker-day--color--range-disabled);
-      }
-    }
-
-    &.disabled {
-      background-color: var(--theme-datepicker-day--background--disabled);
-      color: var(--theme-datepicker-day--color--disabled);
-    }
-
-    &.week-day {
-      color: var(--theme-datepicker-weekday--color);
-      font-size: 12px;
-      line-height: 20px;
-      border: none;
-      background: none;
-      cursor: initial;
-    }
-
-    &.empty-day {
-      border: none;
-      background: none;
-      cursor: initial;
-    }
-
-    &.week-number {
-      font-size: 10px;
-      line-height: 14px;
-      color: var(--theme-datepicker-ix--color);
-      border: none;
-      background: none;
-      cursor: initial;
-    }
-
-    &:focus-visible {
-      background-color: var(--theme-datepicker-day--background--selected);
-      border: inset 1px solid
-        var(--theme-datepicker-day--border-color--selected);
-      color: var(--theme-datepicker-day--color--selected);
-      font-size: 14px;
-      line-height: 20px;
-      letter-spacing: 0;
     }
   }
-}
 
-.button {
-  display: flex;
-  justify-content: flex-end;
-}
+  .button {
+    display: flex;
+    justify-content: flex-end;
+  }
 
-.hidden {
-  display: none;
+  .hidden {
+    display: none;
+  }
 }
